Bug 104534 - LibreOffice crashes when Pattern area type is selected in Chart column
Summary: LibreOffice crashes when Pattern area type is selected in Chart column
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.beta1
Hardware: All All
: highest critical
Assignee: Julien Nabet
URL:
Whiteboard: target:5.4.0 target:5.3.0.1
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-12-09 17:23 UTC by pcharalk
Modified: 2016-12-10 15:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of the crash with 5.4 master (31.66 KB, text/plain)
2016-12-09 18:01 UTC, Buovjaga
Details
bt with symbols (10.35 KB, text/plain)
2016-12-10 13:06 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pcharalk 2016-12-09 17:23:09 UTC
How to reproduce:

Create chart
Select a column (double click - open Data Series)
Go to Area
Select Pattern
Crashes as soon as i click on "Pattern"
Comment 1 Buovjaga 2016-12-09 18:01:50 UTC
Created attachment 129430 [details]
GDB trace of the crash with 5.4 master

Repro.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: a564821eb9e991774195120e6965b2a8b1419dc5
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on December 9th 2016
Comment 2 Julien Nabet 2016-12-10 13:06:37 UTC
Created attachment 129458 [details]
bt with symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
I had to use kde4 rendering because of tdf#104551
Surprisingly, I retrieved a bt a bit different from the Buovjaga's one.
Comment 3 Julien Nabet 2016-12-10 13:43:21 UTC
I submitted a patch to review for master sources, see https://gerrit.libreoffice.org/#/c/31833/
Comment 4 Commit Notification 2016-12-10 15:16:10 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fce5b024e9f25c3fcef2537a22474ece0dc416f

tdf#104534: Retrieve list of patterns

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2016-12-10 15:17:33 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38bf0e92e0f78e72345474013f695a2e660ee732&h=libreoffice-5-3

tdf#104534: Retrieve list of patterns

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2016-12-10 15:18:17 UTC
Let's put this one to FIXED now.
Comment 7 Buovjaga 2016-12-10 15:56:32 UTC
Verified fix on master. Thanks, Julien :)

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 1fce5b024e9f25c3fcef2537a22474ece0dc416f
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on December 10th 2016