tdf#104534: Retrieve list of patterns

using same way as gradients, bitmap, etc.

Change-Id: I49788d5af163aa6f06a12c87ee08e6599fc940c8
Reviewed-on: https://gerrit.libreoffice.org/31833
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>